--- a/Trote/index.html
+++ b/Trote/index.html
@@ -14,7 +14,7 @@
 
     <div class="Grupo1">
       
-        <img class="foto" src="C:\Users\plays\Documents\HTML's\Trote\CSS2\trote_mascote.jpeg" alt="Mascote"/>
+        <img class="foto" src="CSS2/trote_mascote.jpeg" alt="Mascote"/>
 
 
         <p> Construa vitórias fora de campo e jogue pela solidariedade </p>
@@ -27,7 +27,5 @@
         </nav>
 
     </div>
-    
-
 </body>
 </html>
