--- a/Trote/introdução.html
+++ b/Trote/introdução.html
@@ -14,7 +14,7 @@
         Introdução
     </header>
 
-    <div style="height: 500px; overflow: scroll;width: 550px;" class="Paragrafos">
+    <div class="Paragrafos">
         <p>
             O Centro Universitário Municipal de Franca - Uni-FACEF, criado em 1951, como
             Faculdade de Ciências Econômicas é uma instituição pública, constituída como autarquia
@@ -51,22 +51,32 @@
             Especificamente, corresponde com as finalidades a que se propõe:
             <br>
             <br>
-            1- Formar pessoas com habilidade tanto para um alto desempenho técnicoprofissional, quanto para o exercício
+            <ol>
+            <li>
+             Formar pessoas com habilidade tanto para um alto desempenho técnicoprofissional, quanto para o exercício
             da cidadania, com uma vivência ética e
             participativa no mundo social;
+            </li>
             <br>
-            2- Promover a construção do conhecimento, a sua transmissão crítica e a
+            <li>
+             Promover a construção do conhecimento, a sua transmissão crítica e a
             compreensão do mundo atual, particularmente no que se refere às necessidades
             nacionais e regionais;
+            </li>
             <br>
-            3- Participar do desenvolvimento de condições e ações que evidenciem o “aprender a
+            <li>
+             Participar do desenvolvimento de condições e ações que evidenciem o “aprender a
             aprender” e promovam a educação continuada, nos campos de atuação profissional
             com que se identificam;
+            </li>
             <br>
-            4- Partilhar, com todos os segmentos da sociedade, da identificação, análise e busca
+            <li>
+             Partilhar, com todos os segmentos da sociedade, da identificação, análise e busca
             de soluções dos problemas da comunidade, tanto local e regional, quanto da
             sociedade mais ampla, estimulados a participar em pesquisas científicas e a
             publicar seus trabalhos em eventos.
+            </li>
+            </ol>
             <br>
             <br>
             Nesse contexto, fomenta-se o Trote Solidário entre os calouros, como uma iniciativa
