--- a/Trote/Formato.html
+++ b/Trote/Formato.html
@@ -24,6 +24,7 @@
             estabelecido. Os padrinhos vão atuar na orientação e condução das provas a serem
             cumpridas pelos calouros, contando com o apoio dos demais docentes do curso.
             Assim, o TROTE SOLIDÁRIO Uni-FACEF 2025 contará com duas etapas:
+        </p>
         <table border="1">
             <tr>
                 <td>1a Etapa</td>
@@ -49,9 +50,12 @@
                 </td>
                 </ul>
             </tr>
-
         </table>
-        </p>
+       <p>A abertura oficial do Trote Solidário Uni-FACEF 2025 se dará no dia 18 de
+        fevereiro, às 18h15, no Auditório “Edna Maria Campanhol”, Unidade 2, com uma fala
+        de boas-vindas, ressaltando a importância da ação, e posteriormente será realizada a
+        apresentação do regulamento e o sorteio referente às cores, salas de entrega da
+        arrecadação e ordem de apresentação na noite de encerramento.</p> 
     </div>
     <a href="index.html">Voltar</a>
 </body>
