--- a/Trote/index.html
+++ b/Trote/index.html
@@ -24,6 +24,7 @@
             <a href="introdução.html">Introdução</a>
             <a href="Objetivo.html">Objetivo</a>
             <a href="Formato.html">Formato</a>
+            <a href="Gincana.html">Gincana</a>
         </nav>
 
     </div>
