--- a/Trote/Formato.html
+++ b/Trote/Formato.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="CSS2/Style4.css">
+<link rel="stylesheet" href="CSS2/StyleFormt.css">
 <script src="JS2/ScriptsLinks.js"></script>
 
 <head>
