--- a/Trote/index.html
+++ b/Trote/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="CSS2/Style.css">
+    <link rel="stylesheet" href="CSS2/StyleHome.css">
     <script src="JS2/ScriptsLinks.js"></script>
 <head>
     <meta charset="UTF-8">
@@ -25,6 +25,7 @@
             <a href="Objetivo.html">Objetivo</a>
             <a href="Formato.html">Formato</a>
             <a href="Gincana.html">Gincana</a>
+            <a href="Calculadoras.html">Calculadoras</a>
         </nav>
 
     </div>
