--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="CSS2/Style5.css">
+<link rel="stylesheet" href="CSS2/StyleGinc.css">
 <script src="JS2/ScriptsLinks.js"></script>
 
 <head>
@@ -45,6 +45,7 @@
             exclusivamente, das 8h às 10h00, no dia 02/04/2025 (quarta-feira), na Unidade I
             (Av. Major Nicácio, 2433), conforme determinação deste Regulamento.
         </p>
+            <div class="TT">Tabela 1 Equipes e Padrinhos</div>
         <table border="1">
             <tr>
                 <th class="blue">Equipes*</th> <td class="blue">Cursos</td> <td class="blue">Alunos</td> <td class="blue">Padrinhos</td>
@@ -72,13 +73,58 @@
             <tr>
                 <td class="vermelho">Vermelha</td> <td> Administração <br> Ciencias Contabeis</td>
                 <td>93 <br> <td>EM BREVE</td>
-               <ul>
-                    <li></li>
-                   
-                </td>
-                </ul>
             </tr>
         </table>
+    <br>
+    <br>
+        <div class="TT">Tabela 2 Cursos e Alunos</div>
+        <table border="1">
+            <tr>
+                <th class="blue">Cursos</th> <td class="blue">Alunos</td>
+            <tr>
+                <td>Administração</td> <td>70</td> 
+            </tr>
+            <tr>
+                <tr>
+                    <td>Ciencias da Computação</td> <td>36</td>
+                </tr>
+            </tr>
+            <tr>
+                <tr>
+                    <td>Ciencias Contabeis</td> <td>23</td> 
+                </tr>
+            </tr>
+            <tr>
+                <td>Comunicação Social - Publ. e Propaganda</td> <td>37 </td>
+            </tr>
+            <tr>
+                <td>Enfermagem</td> <td> 19 </td>
+            </tr>
+            <tr>
+                <td>Eng. Civil</td> <td> 20 </td>
+            </tr>
+            <tr>
+                <td>Eng. Produção</td> <td> 09 </td>
+            </tr>
+            <tr>
+                <td>Eng. Software</td> <td> 60 </td>
+            </tr>
+            <tr>
+                <td>Letras</td> <td> 22 </td>
+            </tr>
+            <tr>
+                <td>Matematica</td> <td> 16 </td>
+            </tr>
+            <tr>
+                <td>Medicina</td> <td> 84 </td>
+            </tr>
+            <tr>
+                <td>Psicologia</td> <td> 60 </td>
+            </tr>
+            <tr>
+                <td>Sistema de Informação</td> <td> 29 </td>
+            </tr>
+    </table>
     </div>
     <a href="index.html">Voltar</a>
 </body>
