--- a/Trote/Objetivo.html
+++ b/Trote/Objetivo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="CSS2/Style3.css">
+<link rel="stylesheet" href="CSS2/StyleObj.css">
 <script src="JS2/ScriptsLinks.js"></script>
 
 <head>
