--- a/Trote/introdução.html
+++ b/Trote/introdução.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="CSS2/Style2.css">
+<link rel="stylesheet" href="CSS2/StyleIntro.css">
 <script src="JS2/ScriptsLinks.js"></script>
 
 <head>
