--- a/Trote/Formato.html
+++ b/Trote/Formato.html
@@ -29,35 +29,35 @@
             <tr>
                 <td>1a Etapa</td>
                 <td>Gincana Solidária
-                <ul>
-                    <li> ALIMENTOS E SUPLEMENTOS</li>
-                    <li>CAMPANHA DO LEITE</li>
-                    <li>DOAÇÃO DE SANGUE</li>
-                    <li>AÇÃO EM ENTIDADES SOCIAIS DA CIDADE DE FRANCA</li>
-                    <li> REGISTRO AUDIOVISUAL</li>
+                    <ul>
+                        <li> ALIMENTOS E SUPLEMENTOS</li>
+                        <li>CAMPANHA DO LEITE</li>
+                        <li>DOAÇÃO DE SANGUE</li>
+                        <li>AÇÃO EM ENTIDADES SOCIAIS DA CIDADE DE FRANCA</li>
+                        <li> REGISTRO AUDIOVISUAL</li>
                 </td>
                 </ul>
             </tr>
             <tr>
                 <td>2a Etapa</td>
                 <td>Integração e envolvimento
-               <ul>
-                <li>HOMENAGEM A ESPORTISTAS FRANCANOs</li>
-                    <li>MASCOTE DA EQUIPE</li>
-                    <li>CARACTERIZAÇÃO E ANIMAÇÃO</li>
-                    <li>ATIVIDADES RECREATIVAS E CARACTERIZAÇÃO</li>
-                    <li>APRESENTAÇÃO DAS AÇÕES SOCIAIS NAS ENTIDADES</li>
+                    <ul>
+                        <li>HOMENAGEM A ESPORTISTAS FRANCANOs</li>
+                        <li>MASCOTE DA EQUIPE</li>
+                        <li>CARACTERIZAÇÃO E ANIMAÇÃO</li>
+                        <li>ATIVIDADES RECREATIVAS E CARACTERIZAÇÃO</li>
+                        <li>APRESENTAÇÃO DAS AÇÕES SOCIAIS NAS ENTIDADES</li>
                 </td>
                 </ul>
             </tr>
         </table>
-       <p>A abertura oficial do Trote Solidário Uni-FACEF 2025 se dará no dia 18 de
-        fevereiro, às 18h15, no Auditório “Edna Maria Campanhol”, Unidade 2, com uma fala
-        de boas-vindas, ressaltando a importância da ação, e posteriormente será realizada a
-        apresentação do regulamento e o sorteio referente às cores, salas de entrega da
-        arrecadação e ordem de apresentação na noite de encerramento.</p> 
+        <p>A abertura oficial do Trote Solidário Uni-FACEF 2025 se dará no dia 18 de
+            fevereiro, às 18h15, no Auditório “Edna Maria Campanhol”, Unidade 2, com uma fala
+            de boas-vindas, ressaltando a importância da ação, e posteriormente será realizada a
+            apresentação do regulamento e o sorteio referente às cores, salas de entrega da
+            arrecadação e ordem de apresentação na noite de encerramento.</p>
     </div>
-    <a href="index.html">Voltar</a>
+    <a href="Home.html">Voltar</a>
 </body>
 
 </html>
