--- a/Trote/Objetivo.html
+++ b/Trote/Objetivo.html
@@ -31,9 +31,9 @@
             comissão organizadora da Edição de 2025 do Trote Solidário Uni-FACEF e repassar as
             informações aos demais estudantes.
 
-        </p>      
+        </p>
     </div>
-    <a href="index.html">Voltar</a>
+    <a href="Home.html">Voltar</a>
 </body>
 
 </html>
