--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -45,88 +45,153 @@
             exclusivamente, das 8h às 10h00, no dia 02/04/2025 (quarta-feira), na Unidade I
             (Av. Major Nicácio, 2433), conforme determinação deste Regulamento.
         </p>
-            <div class="TT">Tabela 1 Equipes e Padrinhos</div>
+        <div class="TT">Tabela 1 Equipes e Padrinhos</div>
         <table border="1">
             <tr>
-                <th class="blue">Equipes*</th> <td class="blue">Cursos</td> <td class="blue">Alunos</td> <td class="blue">Padrinhos</td>
+                <th class="blue">Equipes*</th>
+                <td class="blue">Cursos</td>
+                <td class="blue">Alunos</td>
+                <td class="blue">Padrinhos</td>
             <tr>
-                <td class="laranja">Laranja</td> <td>Matematica <br> Letras <br> Engenharia de Software</td> 
-                <td>97  <br> <td> EM BREVE </td>
+                <td class="laranja">Laranja</td>
+                <td>Matematica <br> Letras <br> Engenharia de Software</td>
+                <td>97 <br>
+                <td> EM BREVE </td>
             </tr>
             <tr>
-                <tr>
-                    <td class="preto">Preto</td> <td>Medicina <br> Enfermagem</td> 
-                    <td>103 <br> <td> EM BREVE </td>
-                </tr>
+            <tr>
+                <td class="preto">Preto</td>
+                <td>Medicina <br> Enfermagem</td>
+                <td>103 <br>
+                <td> EM BREVE </td>
+            </tr>
             </tr>
             <tr>
-                <tr>
-                    <td class="roxo">Roxo</td> <td>Comunic. Social - PP <br> Sistemas De Informação <br> Ciencias da Computação</td> 
-                    <td>102  <br> <td> EM BREVE </td>
-                </tr>
+            <tr>
+                <td class="roxo">Roxo</td>
+                <td>Comunic. Social - PP <br> Sistemas De Informação <br> Ciencias da Computação</td>
+                <td>102 <br>
+                <td> EM BREVE </td>
+            </tr>
             </tr>
             <tr>
-                <td class="verde">Verde</td> <td>Engenharia de Produção <br> Engenharia Civil <br> Psicologia</td> 
-                <td>88 <br> <td>EM BREVE</td>
-               
+                <td class="verde">Verde</td>
+                <td>Engenharia de Produção <br> Engenharia Civil <br> Psicologia</td>
+                <td>88 <br>
+                <td>EM BREVE</td>
+
             </tr>
             <tr>
-                <td class="vermelho">Vermelha</td> <td> Administração <br> Ciencias Contabeis</td>
-                <td>93 <br> <td>EM BREVE</td>
+                <td class="vermelho">Vermelha</td>
+                <td> Administração <br> Ciencias Contabeis</td>
+                <td>93 <br>
+                <td>EM BREVE</td>
             </tr>
         </table>
-    <br>
-    <br>
+        <br>
+        <br>
         <div class="TT">Tabela 2 Cursos e Alunos</div>
         <table border="1">
             <tr>
-                <th class="blue">Cursos</th> <td class="blue">Alunos</td>
+                <th class="blue">Cursos</th>
+                <td class="blue">Alunos</td>
             <tr>
-                <td>Administração</td> <td>70</td> 
+                <td>Administração</td>
+                <td>70</td>
             </tr>
             <tr>
-                <tr>
-                    <td>Ciencias da Computação</td> <td>36</td>
-                </tr>
+            <tr>
+                <td>Ciencias da Computação</td>
+                <td>36</td>
+            </tr>
             </tr>
             <tr>
-                <tr>
-                    <td>Ciencias Contabeis</td> <td>23</td> 
-                </tr>
+            <tr>
+                <td>Ciencias Contabeis</td>
+                <td>23</td>
+            </tr>
             </tr>
             <tr>
-                <td>Comunicação Social - Publ. e Propaganda</td> <td>37 </td>
+                <td>Comunicação Social - Publ. e Propaganda</td>
+                <td>37 </td>
             </tr>
             <tr>
-                <td>Enfermagem</td> <td> 19 </td>
+                <td>Enfermagem</td>
+                <td> 19 </td>
             </tr>
             <tr>
-                <td>Eng. Civil</td> <td> 20 </td>
+                <td>Eng. Civil</td>
+                <td> 20 </td>
             </tr>
             <tr>
-                <td>Eng. Produção</td> <td> 09 </td>
+                <td>Eng. Produção</td>
+                <td> 09 </td>
             </tr>
             <tr>
-                <td>Eng. Software</td> <td> 60 </td>
+                <td>Eng. Software</td>
+                <td> 60 </td>
             </tr>
             <tr>
-                <td>Letras</td> <td> 22 </td>
+                <td>Letras</td>
+                <td> 22 </td>
             </tr>
             <tr>
-                <td>Matematica</td> <td> 16 </td>
+                <td>Matematica</td>
+                <td> 16 </td>
             </tr>
             <tr>
-                <td>Medicina</td> <td> 84 </td>
+                <td>Medicina</td>
+                <td> 84 </td>
             </tr>
             <tr>
-                <td>Psicologia</td> <td> 60 </td>
+                <td>Psicologia</td>
+                <td> 60 </td>
             </tr>
             <tr>
-                <td>Sistema de Informação</td> <td> 29 </td>
+                <td>Sistema de Informação</td>
+                <td> 29 </td>
             </tr>
-    </table>
+        </table>
+        <h3>ALIMENTOS E SUPLEMENTOS - METAS POR EQUIPE</h3>
+        <p>
+            Esta etapa consiste na arrecadação/doação, pelos calouros, de itens
+            alimentícios que serão posteriormente entregues a entidades e instituições francanas
+            de assistência social e suplementos alimentares destinados às atividades dos
+            Voluntários da Saúde, que atuam no Hospital de Câncer de Franca.</p>
+        <p>Para este ano a meta de arrecadação é composta por um Kit Alimentação por
+            estudante e um Suplemento Alimentar para cada dois estudantes da equipe:</p>
+
+
+        <div class="TabelaMetas">
+
+            <p> -> Kits Alimentação contendo NECESSARIAMENTE os seguintes itens e as
+                respectivas quantidades abaixo relacionadas (por kit):</p>
+            <ul>
+                <li> 2 pacotes de 5kg de arroz - tipo 1;</li>
+                <br>
+                <li>2 pacotes de 2kg (ou 4 pacotes de 1kg) de feijão - tipo carioca;</li>
+                <br>
+                <li>3 unidades óleo de soja (1 litro ou 900ml cada); </li>
+                <br>
+                <li> 6 pacotes de macarrão de 400/500g (ou 3 pacotes de 1 Kg).</li>
+                Suplementos alimentares, conforme especificação:
+                Lata de 400 gramas, adulto, preferencialmente sabor baunilha, das
+                marcas:
+                <p class="marcas" style="font-weight: bold;"> Ensure <br style="text-align: center;"> Nutren 1.0</p>
+                <p>
+                    Meta: 01 (um) Kit Alimentação por estudante e 01 (um) Suplemento Alimentar
+                    para cada dois estudantes da equipe.</p>
+            </ul>
+
+
+            <p>
+
+            </p>
+        </div>
     </div>
-    <a href="index.html">Voltar</a>
+
+
+    <a href="Home.html">Voltar</a>
 </body>
 
 </html>
