--- a/Trote/introdução.html
+++ b/Trote/introdução.html
@@ -51,41 +51,41 @@
             Especificamente, corresponde com as finalidades a que se propõe:
             <br>
             <br>
-            <ol>
+        <ol>
             <li>
-             Formar pessoas com habilidade tanto para um alto desempenho técnicoprofissional, quanto para o exercício
-            da cidadania, com uma vivência ética e
-            participativa no mundo social;
+                Formar pessoas com habilidade tanto para um alto desempenho técnicoprofissional, quanto para o exercício
+                da cidadania, com uma vivência ética e
+                participativa no mundo social;
             </li>
             <br>
             <li>
-             Promover a construção do conhecimento, a sua transmissão crítica e a
-            compreensão do mundo atual, particularmente no que se refere às necessidades
-            nacionais e regionais;
+                Promover a construção do conhecimento, a sua transmissão crítica e a
+                compreensão do mundo atual, particularmente no que se refere às necessidades
+                nacionais e regionais;
             </li>
             <br>
             <li>
-             Participar do desenvolvimento de condições e ações que evidenciem o “aprender a
-            aprender” e promovam a educação continuada, nos campos de atuação profissional
-            com que se identificam;
+                Participar do desenvolvimento de condições e ações que evidenciem o “aprender a
+                aprender” e promovam a educação continuada, nos campos de atuação profissional
+                com que se identificam;
             </li>
             <br>
             <li>
-             Partilhar, com todos os segmentos da sociedade, da identificação, análise e busca
-            de soluções dos problemas da comunidade, tanto local e regional, quanto da
-            sociedade mais ampla, estimulados a participar em pesquisas científicas e a
-            publicar seus trabalhos em eventos.
+                Partilhar, com todos os segmentos da sociedade, da identificação, análise e busca
+                de soluções dos problemas da comunidade, tanto local e regional, quanto da
+                sociedade mais ampla, estimulados a participar em pesquisas científicas e a
+                publicar seus trabalhos em eventos.
             </li>
-            </ol>
-            <br>
-            <br>
-            Nesse contexto, fomenta-se o Trote Solidário entre os calouros, como uma iniciativa
-            institucional, já presente no Uni-FACEF há mais de 30 anos, visando à inserção do
-            discente no ambiente acadêmico, focando a promoção social, agregando em sua formação
-            a importância de esforços que tornem suas decisões mais éticas e humanas.
-        </p>      
+        </ol>
+        <br>
+        <br>
+        Nesse contexto, fomenta-se o Trote Solidário entre os calouros, como uma iniciativa
+        institucional, já presente no Uni-FACEF há mais de 30 anos, visando à inserção do
+        discente no ambiente acadêmico, focando a promoção social, agregando em sua formação
+        a importância de esforços que tornem suas decisões mais éticas e humanas.
+        </p>
     </div>
-    <a href="index.html">Voltar</a>
+    <a href="Home.html">Voltar</a>
 </body>
 
 </html>
