--- a/Trote/Calculadoras.html
+++ b/Trote/Calculadoras.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="coluna4">
-                    <label>Kit De Alimentação (Avulso):</label>
+                    <label>Kit De Alimentação (Aculso):</label>
                     <input type="number" id="kit" />
                 </div>
 
