--- a/Trote/Calculadoras.html
+++ b/Trote/Calculadoras.html
@@ -18,7 +18,7 @@
             <select id="equipe">
                 <option value="Laranja">Laranja</option>
                 <option value="Preto">Preto</option>
-                <option value="Roxa">Roxa</option>
+                <option value="Roxo">Roxa</option>
                 <option value="Verde">Verde</option>
                 <option value="Vermelho">Vermelho</option>
             </select>
@@ -26,56 +26,61 @@
             <div class="LinhaTexto">
 
                 <div class="coluna1">
+                    <label>Mascote:</label>
+                    <input type="number" id="Mascote" />
+                </div>
+
+                <div class="coluna2">
                     <label>Ação Social (pts):</label>
                     <input type="number" id="acaoSocial" />
                 </div>
 
-                <div class="coluna2">
+                <div class="coluna3">
                     <label>Homenagem (pts):</label>
                     <input type="number" id="Homenagem" />
                 </div>
 
-                <div class="coluna3">
+                <div class="coluna4">
                     <label>Caixas de Leite (litros):</label>
                     <input type="number" id="Leite" />
                 </div>
 
-                <div class="coluna4">
+                <div class="coluna5">
                     <label>Kit De Alimentação (Aculso):</label>
                     <input type="number" id="kit" />
                 </div>
 
-                <div class="coluna5">
+                <div class="coluna6">
                     <label>Caixa de suplementos (Avulso):</label>
                     <input type="number" id="Suple" />
                 </div>
 
-                <div class="coluna6">
+                <div class="coluna7">
                     <label>Pacote de Arroz (5kg):</label>
                     <input type="number" id="PacArroz5kg" />
                 </div>
 
-                <div class="coluna7">
+                <div class="coluna8">
                     <label>Pacote de Arroz (1kg):</label>
                     <input type="number" id="PacArroz1kg" />
                 </div>
 
-                <div class="coluna8">
+                <div class="coluna9">
                     <label>Pacote de Feijão (2kg):</label>
                     <input type="number" id="PacFej2kg" />
                 </div>
 
-                <div class="coluna9">
+                <div class="coluna10">
                     <label>Pacote de Feijão (1kg):</label>
                     <input type="number" id="PacFej1kg" />
                 </div>
 
-                <div class="coluna10">
+                <div class="coluna11">
                     <label>Pacote de Macarrao (400/500g):</label>
                     <input type="number" id="Macarrao" />
                 </div>
 
-                <div class="coluna11">
+                <div class="coluna12">
                     <label>Óleo (900ml):</label>
                     <input type="number" id="Oleo" />
                 </div>
