--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -188,43 +188,49 @@
             <tr>
                 <th class="blue">Equipes</th>
                 <td class="blue">Cursos</td>
-                <th class="blue">Meta <br> Kits  Suple</th>   
-                <th class="blue">80%  <br> Kits  Suple</th> 
-                <th class="blue">50%  <br> Kits  Suple</th>
-                <th class="blue">20%  <br> Kits  Suple</th>
+                <th class="blue">Meta <br> Kits | Suple</th>   
+                <th class="blue">80%  <br> Kits | Suple</th> 
+                <th class="blue">50%  <br> Kits | Suple</th>
+                <th class="blue">20%  <br> Kits | Suple</th>
 
             <tr>
                 <td class="laranja">Laranja</td>
                 <td>Matematica <br> Letras <br> Engenharia de Software</td>
                 <td style="text-align: center; " >97 | 49</td>
+                <td style="text-align: center; " >78 | 39</td>
+                <td style="text-align: center; " >49 | 25</td>
+                <td style="text-align: center; " >19 | 10</td>
             </tr>
             <tr>
             <tr>
                 <td class="preto">Preto</td>
                 <td>Medicina <br> Enfermagem</td>
-                <td> <br>
-                <td>  </td>
+                <td style="text-align: center; " >103 | 52</td>
+                <td style="text-align: center; " >82 | 42</td>
+                <td style="text-align: center; " >52 | 26</td>
+                <td style="text-align: center; " >21 | 10</td>
+                <td> </td>
             </tr>
             </tr>
             <tr>
             <tr>
                 <td class="roxo">Roxo</td>
                 <td>Comunic. Social - PP <br> Sistemas De Informação <br> Ciencias da Computação</td>
-                <td>102 <br>
+                <td style="text-align: center; " >102 | 51</td>
                 <td>  </td>
             </tr>
             </tr>
             <tr>
                 <td class="verde">Verde</td>
                 <td>Engenharia de Produção <br> Engenharia Civil <br> Psicologia</td>
-                <td>88 <br>
+                <td style="text-align: center; " >88 | 44</td>
                 <td> </td>
 
             </tr>
             <tr>
                 <td class="vermelho">Vermelha</td>
                 <td> Administração <br> Ciencias Contabeis</td>
-                <td>93 <br>
+                <td style="text-align: center; " >93 | 47</td>
                 <td> </td>
             </tr>
         </table>
