--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -209,7 +209,7 @@
                 <td style="text-align: center; " >82 | 42</td>
                 <td style="text-align: center; " >52 | 26</td>
                 <td style="text-align: center; " >21 | 10</td>
-                <td> </td>
+                
             </tr>
             </tr>
             <tr>
@@ -217,27 +217,47 @@
                 <td class="roxo">Roxo</td>
                 <td>Comunic. Social - PP <br> Sistemas De Informação <br> Ciencias da Computação</td>
                 <td style="text-align: center; " >102 | 51</td>
-                <td>  </td>
+                <td style="text-align: center; " >82 | 41</td>
+                <td style="text-align: center; " >51 | 26</td>
+                <td style="text-align: center; " >20 | 10</td>
             </tr>
             </tr>
             <tr>
                 <td class="verde">Verde</td>
                 <td>Engenharia de Produção <br> Engenharia Civil <br> Psicologia</td>
                 <td style="text-align: center; " >88 | 44</td>
-                <td> </td>
+                <td style="text-align: center; " >70 | 35</td>
+                <td style="text-align: center; " >44 | 22</td>
+                <td style="text-align: center; " >18 | 9</td>
 
             </tr>
             <tr>
                 <td class="vermelho">Vermelha</td>
                 <td> Administração <br> Ciencias Contabeis</td>
                 <td style="text-align: center; " >93 | 47</td>
-                <td> </td>
+                <td style="text-align: center; " >74 | 38</td>
+                <td style="text-align: center; " >47 | 24</td>
+                <td style="text-align: center; " >19 | 9</td>
             </tr>
         </table>
+        <ul class="Lista2">
+            <li>TAREFA CUMPRIDA COM O TOTAL DA META = 5.000 PONTO;</li>
+            <br>
+            <li>Entrega de, no mínimo, 80% dos itens = 4.000 pontos;</li>
+            <br>
+            <li>Entrega de, no mínimo, 50% dos itens = 2.500 pontos; </li>
+            <br>
+            <li>Entrega de, no mínimo, 20% dos itens = 1.000 pontos; </li>
+            <br>
+            <li>Abaixo de 20%, a equipe não pontua.</li>
+        </ul>
+
+        <br>
+        <a href="Home.html">Voltar</a>
     </div>
 
 
-    <a href="Home.html">Voltar</a>
+    
 </body>
 
 </html>
