--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -167,15 +167,16 @@
                 <td> 29 </td>
             </tr>
         </table>
-        
+
         <h3>ALIMENTOS E SUPLEMENTOS - METAS POR EQUIPE</h3>
         <p>
             Esta etapa consiste na arrecadação/doação, pelos calouros, de itens alimentícios que serão posteriormente
             entregues a entidades e instituições francanas de assistência social e suplementos alimentares destinados às
             atividades dos Voluntários da Saúde,
             que atuam no Hospital de Câncer de Franca.</p>
-            
-           <p> Para este ano a meta de arrecadação é composta por um Kit Alimentação por estudante e um Suplemento Alimentar
+
+        <p> Para este ano a meta de arrecadação é composta por um Kit Alimentação por estudante e um Suplemento
+            Alimentar
             para cada dois estudantes da equipe:</p>
 
 
@@ -376,6 +377,80 @@
             </tr>
         </table>
 
+        <br>
+        <br>
+        <p style="font-weight: bold;"> -> Alimentos e Suplementos - Adicionais</p>
+        <p> As doaçoes que excederem a meta serão pontuadas da seguinte forma: </p>
+        <ul class="Lista2">
+            <p>Avulsos:</p>
+            <li> Kit Alimentação - 30 pontos</li>
+            <br>
+            <li>Lata de suplemento conforme regulamento - 15 pontos</li>
+            <br>
+            <li>Pacote de Arroz 05 Kg - 5 pontos </li>
+            <br>
+            <li> Pacote de Arroz 01 Kg - 1 ponto</li>
+            <br>
+            <li> Pacote de feijão 02 Kg - 2 ponto</li>
+            <br>
+            <li> Pacote de feijão 01 Kg - 1 ponto</li>
+            <br>
+            <li> Pacote de Arroz 01 Kg - 1/2 ponto</li>
+            <br>
+            <li> Oleo 900ml - 1 ponto</li>
+
+            <p class="marcas" style="font-weight: bold;"> Ensure | Nutren 1.0 </p>
+            <p>
+                Meta: 01 (um) Kit Alimentação por estudante e 01 (um) Suplemento Alimentar para cada dois estudantes
+                da equipe.</p>
+        </ul>
+        <br>
+        <p>
+            Também será estendida aos veteranos a emissão de certificado por doação.
+            Para tanto, serão concedidas 20 horas atividade para cada kit de alimentos e 10 horas
+            para cada Suplemento Alimentar doados, limitados a 60 horas no total. A listagem de
+            controle das doações dos veteranos será disponibilizada pelo chefe do departamento
+            ou padrinho da equipe à comissão.
+            <br>
+            <br>
+            A doação seguirá a mesma tabela de pontuação dos alimentos adicionais acima.
+        </p>
+        <ul class="ListaAlt">
+            <p>Importante:</p>
+            <li>Doações sem a composição do conjunto padrão podem ser pontuadas
+                para a turma, conforme critério de itens avulsos, mas não fazem jus ao
+                certificado de horas atividade.</li>
+            <br>
+            <li>Outros alimentos que não fazem parte do Kit Alimentação, como por
+                exemplo: enlatados, produtos de higiene e limpeza, entre outros, serão
+                encaminhados à doação, porém não pontuarão.</li>
+            <br>
+
+        </ul>
+        <p style="font-weight: bold;">-> Campanha do Leite - 2 pontos por litro</p>
+        <p>
+            Este ano estamos arrecadando litros de leite longa vida, UHT (Integral,
+            Semidesnatado ou Desnatado), para compor as doações do Trote Solidário 2025.
+            Serão concedidos à equipe 2 pontos por cada litro de leite doado.
+        </p>
+        <p style="font-weight: bold;">
+            ATENÇÃO: Para ser computada a doação o Leite deverá possuir data de
+            vencimento posterior a 02 de junho de 2025.
+        </p>
+        <br>
+        <p style="font-weight: bold;">-> Doação De Sangue</p>
+        <p>
+            A meta de doação de sangue no Trote Solidário 2025 corresponde a uma doação
+            para cada dois estudantes da equipe, e será pontuada da seguinte forma:
+        </p>
+
+        <ul class="Lista2">
+            <li> Cumprimento da meta: 2.500 pontos</li>
+            <br>
+            <li>Doação adiconal (superando a meta): 20 pontos por doação</li>
+            <br>
+            <li>Pontuação da equipe que não atingir a meta: 20 pontos por doação</li>
+        </ul>
         <br>
         <a href="Home.html">Voltar</a>
     </div>
