--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -452,6 +452,120 @@
             <li>Pontuação da equipe que não atingir a meta: 20 pontos por doação</li>
         </ul>
         <br>
+        <br>
+        <p class="TT">Tabela 4 - Metas proporcionais de doações de sangue</p>
+        <table border="1">
+            <tr class="blue">
+                <th>Cor</th>
+                <th>Meta</th>
+            </tr>
+
+            <tr>
+                <td class="laranja">Laranja</td>
+                <td>49</td>
+            </tr>
+            <tr>
+                <td class="preto">Preto</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td class="Roxo">Roxa</td>
+                <td>51</td>
+            </tr>
+            <tr>
+                <td class="Verde">Verde</td>
+                <td>44</td>
+            </tr>
+            <tr>
+                <td class="vermelho">Vermelho</td>
+                <td>47</td>
+            </tr>
+        </table>
+        <br>
+        <br>
+        <p>
+            Para comprovar a doação o doador deverá solicitar um cartão do Hemocentro
+            com carimbo do Trote Solidário e assinatura. Os comprovantes deverão ser entregues
+            no momento da entrega dos demais itens no dia 02/04/2025, das 08h00 às 10h00 na
+            Unidade I do Uni-FACEF.
+        </p>
+        <br>
+        <br>
+        <p style="font-weight: bold;">-> Ação social em entidades de Franca/sp</p>
+
+        <p>
+            O município de Franca conta com uma grande quantidade de programas,
+            projetos, ações e instituições na área social. No cenário atual, em que os efeitos da
+            pandemia ainda afetam de forma intensa a sociedade, estas instituições também
+            enfrentam problemas e dificuldades de diversas naturezas, que vão além da questão
+            financeira.
+            <br>
+            <br>
+            Esta atividade tem como objetivo principal levar os novos estudantes
+            universitários do Uni-FACEF a se aproximar dos programas sociais, buscando
+            conhecer seu trabalho, identificar as dificuldades enfrentadas no cenário atual e
+            desenvolver formas criativas de ajudá-los.
+            <br>
+            <br>
+            Assim, caberá aos alunos da equipe desenvolver uma ação em uma entidade a
+            ser definida pela equipe.
+        </p>
+        <br>
+        <ul class="Lista2">
+            <li>-> A entidade escolhida pela equipe deverá ser informada à comissão
+                organizadora do Trote Solidário para fins de validação por meio do grupo do
+                whatsapp de Líderes, pois serão admitidas até 2 (duas) entidades do mesmo
+                seguimento.
+            </li>
+            <br>
+            <li>-> A data limite para comunicar a escolha à comissão é 28/02/2025. Ressalta-se
+                que, o quanto antes for feita a comunicação, maior a chance do seguimento
+                ainda estar disponível.</li>
+        </ul>
+        <br>
+        <p>
+            Dentre os seguimentos de entidades que podem ser escolhidas, alguns
+            exemplos são: creche, lar de idosos, entidade que trabalha com deficientes visuais ou
+            autistas, entidade que trabalha com pacientes com câncer, entidade que trabalha com
+            portadores de necessidades especiais, e outras.
+            <br>
+            <br>
+            A Equipe deverá entregar no dia 02/04/2025, das 08h00 às 10h00 na Unidade I
+            do Uni-FACEF um pendrive, contendo:
+        </p>
+        <ul class="Lista3">
+            <p>Um relatorio, de até 5 paginas, descrevendo:</p>
+            <li> Cor da equipe</li>
+            <br>
+            <li> - Nomes/Curso/Semestre dos participantes envolvidos (calouros e veteranos)</li>
+            <br>
+            <li> - Datas e os locais de realização</li>
+            <br>
+            <li> - Apresentação da Entidade</li>
+            <br>
+            <li> - Objetivo da ação</li>
+            <br>
+            <li> - Detalhes da execução</li>
+            <br>
+            <li> - Resultaados Obtidos</li>
+            <p style="font-weight: bold;">-> Material Audiovisual (ver criterios na prova de REGISTRO AUDIOVISUAL pg.
+                09)</p>
+        </ul>
+        <br>
+
+        <ul class="ListaAlt">
+            <p style="font-weight: bold;">A ação deverá contar com, no mínimo, 8 estudantes. Dentre eles:</p>
+            <li> Ao menos um representante calouro de cada curso</li>
+
+            <li>Ao menos representante veterano de cada curso</li>
+        </ul>
+        <p>Pontuação desta atividade = 1.500 pontos*</p>
+        <br>
+        <p>A equipe deverá também se preparar para apresentar para os jurados esta
+            ação, em até 4 minutos, no dia do encerramento. O template para elaboração dos
+            slides estará disponível no site do Uni-FACEF junto a este regulamento.</p>
+
+        <br>
         <a href="Home.html">Voltar</a>
     </div>
 
