--- a/Trote/Gincana.html
+++ b/Trote/Gincana.html
@@ -534,7 +534,7 @@
             do Uni-FACEF um pendrive, contendo:
         </p>
         <ul class="Lista3">
-            <p>Um relatorio, de até 5 paginas, descrevendo:</p>
+            <p style="font-weight: bold;"> -> Um relatorio, de até 5 paginas, descrevendo:</p>
             <li> Cor da equipe</li>
             <br>
             <li> - Nomes/Curso/Semestre dos participantes envolvidos (calouros e veteranos)</li>
@@ -552,7 +552,6 @@
                 09)</p>
         </ul>
         <br>
-
         <ul class="ListaAlt">
             <p style="font-weight: bold;">A ação deverá contar com, no mínimo, 8 estudantes. Dentre eles:</p>
             <li> Ao menos um representante calouro de cada curso</li>
@@ -564,6 +563,54 @@
         <p>A equipe deverá também se preparar para apresentar para os jurados esta
             ação, em até 4 minutos, no dia do encerramento. O template para elaboração dos
             slides estará disponível no site do Uni-FACEF junto a este regulamento.</p>
+        <br>
+        <p style="font-weight: bold;">-> REGISTRO AUDIOVISUAL DA 1° ETAPA</p>
+
+        <p>
+            As equipes deverão entregar registros da realização da PRIMEIRA ETAPA, por
+            meio de fotos e vídeos da arrecadação de alimentos e suplementos, das doações de
+            sague e da ação social. Esse material será utilizado para fins de documentação e
+            acervo do Uni-FACEF e deverá ser entregue no dia 02/04/2025, das 8h às 10h00, na
+            Unidade I, no mesmo pendrive do relatório da ação social.
+        </p>
+
+        <table border="1">
+            <tr>
+                <th style="background-color: gray;">Meta</th>
+                <th style="background-color: gray;">Pontuação</th>
+            <tr>
+                <td>PASTA 1: FOTOS E VÍDEOS DA ARRECADAÇÃO DE <br>
+                    ALIMENTOS E SUPLEMENTOS + DOAÇÃO DE
+                    SANGUE <br><br>
+                    1- Mín. 30 fotos de arrecadações<br>
+                    2- Mín 05 fotos de doações de sangue<br>
+                    3- Mín. 2 vídeos (um na horizontal e outro da vertical)
+                </td>
+                <td style="text-align: center;">
+                    1000 pts
+                </td>
+            </tr>
+            <tr>
+                <td> PASTA 2: FOTOS E VÍDEOS DA AÇÃO<br> NA ENTIDADE
+                    SOCIAL
+                    <br><br>
+                    1- mín. 15 fotos <br>
+                    2- mín 2 vídeos (um na horizontal e outro da vertical)
+                </td>
+                <td style="text-align: center;"> 500pts</td>
+            </tr>
+        </table>
+        <br>
+
+      
+        <ul style="list-style: none;">
+
+            <li>  -> Fotos deverão ser salvas em formato jpeg/heic/png com resolução, no mínimo,
+                de 1080x1920 (FullHD) .</li>
+
+            <li> -> Vídeos deverão ser salvos em formato mp4 com resolução em 4k no formato
+                16:9 (horizontal) ou 9:16 (vertical).</li>
+        </ul>
 
         <br>
         <a href="Home.html">Voltar</a>
