--- a/Trote/Home.html
+++ b/Trote/Home.html
@@ -28,6 +28,7 @@
             <a href="Formato.html">Formato</a>
             <a href="Gincana.html">Gincana</a>
             <a href="Calculadoras.html">Calculadoras</a>
+            <a href="Integração.html">Integração</a>
         </nav>
 
     </div>
