--- a/Trote/Integração.html
+++ b/Trote/Integração.html
@@ -19,7 +19,7 @@
         <p class="Importantes">HOMENAGEM A ESPORTISTAS = Até 2.000 PONTOS</p>
 
         <br>
-            <p>
+        <p>
             Por ser conhecida como a “capital do basquete”, esta modalidade esportiva não
             será contemplada para cumprimento da prova, com o objetivo de divulgar e disseminar
             o cenário esportivo francano ‘para além do basquete’, demonstrando a diversidade de
@@ -67,7 +67,7 @@
         </ul>
         <p class="Importantes">
             MASCOTE DA EQUIPE = Até 500 PONTOS
-        <br>
+            <br>
         <p>
             Os alunos deverão criar 1 (um) mascote para representar e animar a equipe no
             dia do encerramento. Apenas um personagem será aceito sob pena de
@@ -76,8 +76,8 @@
         </p>
         <ul>
             <li style="list-style: none;">
-            <br>
-            <p style="font-weight: bold;">IMPORTANTE:</p>
+                <br>
+                <p style="font-weight: bold;">IMPORTANTE:</p>
                 Originalidade .... (notas de 0 a 200)<br>
                 Caracterização .... (notas de 0 a 150)<br>
                 Atuação .... (notas de 0 a 150)
@@ -89,22 +89,34 @@
         </p>
         <p class="Importantes">
             CARACTERIZAÇÃO E ANIMAÇÃO = Até 1.000 PONTOS
-        <br>
+            <br>
         <p>
             Cada equipe deverá trabalhar a identidade visual (cor da roupa, adereços etc.) e a
             animação, para a noite de encerramento do TROTE SOLIDÁRIO Uni-FACEF 2025, de
             forma a destacar sua torcida, pois esse quesito será avaliado pelo corpo de jurados.
+            <br>
             Atribuir-se-á 1.000 pontos à equipe que cumprir este quesito.
         </p>
         <br>
         <p class="Importantes">
             Atividades Recreativas = Pontuações Extras
-        <br>
+            <br>
         <p>
             Também na noite de encerramento do TROTE SOLIDÁRIO Uni-FACEF 2025,
             ocorrerão atividades recreativas e provas-surpresa e que valerão pontuação
         </p>
+        <br>
+        <br>
+        <p class="Importantes">ATIVIDADES RECREATIVAS = Pontuações Extras</p>
+        
+        <p>
+            Também na noite de encerramento do TROTE SOLIDÁRIO Uni-FACEF 2025,
+            ocorrerão atividades recreativas e provas-surpresa e que valerão pontuação.
+        </p>
+        <br>
+    <a href="Home.html">Voltar</a>
     </div>
+    
 </body>
 
 </html>
