--- a/Trote/Calculadoras.html
+++ b/Trote/Calculadoras.html
@@ -84,6 +84,10 @@
                     <label>Óleo (900ml):</label>
                     <input type="number" id="Oleo" />
                 </div>
+                <div class="coluna13">
+                    <label> Doação de Sangue: </label>
+                    <input type="number" id="sangue"/>
+                </div>
 
                 <button type="button" onclick="calcular()">Calcular</button>
                 <label id="soma" style="background-color: white; color: black;"></label>
