--- a/Trote/Home.html
+++ b/Trote/Home.html
@@ -29,6 +29,7 @@
             <a href="Gincana.html">Gincana</a>
             <a href="Calculadoras.html">Calculadoras</a>
             <a href="Integração.html">Integração</a>
+            <a href="ObsFinais.html">Obs finais</a>
         </nav>
 
     </div>
