--- a/Trote/Home.html
+++ b/Trote/Home.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="CSS2/StyleHome.css">
-<script src="JS2/ScriptsLinks.js"></script>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trote Solidário</title>
-</head>
-
-<body>
-    <div class="RodaPe">
-        Desenvolvido na faculdade UNIFACEF
-    </div>
-
-    <div class="Grupo1">
-
-        <img class="foto" src="CSS2/trote_mascote.jpeg" alt="Mascote" />
-
-
-        <p> Construa vitórias fora de campo e jogue pela solidariedade </p>
-
-        <nav>
-            <a href="Home.html">Home</a>
-            <a href="introdução.html">Introdução</a>
-            <a href="Objetivo.html">Objetivo</a>
-            <a href="Formato.html">Formato</a>
-            <a href="Gincana.html">Gincana</a>
-            <a href="Calculadoras.html">Calculadoras</a>
-            <a href="Integração.html">Integração</a>
-            <a href="ObsFinais.html">Obs finais</a>
-        </nav>
-
-    </div>
-</body>
-
-</html>
+"Site" 
