--- a/Trote/Home.html
+++ b/Trote/Home.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="RodaPe">
-        Desenvolvido na faculdade UNIFACEF
+        Desenvolvido na faculdade UNIFACE
     </div>
 
     <div class="Grupo1">
